--- a/감독만 짤라서 점수주기.ipynb
+++ b/감독만 짤라서 점수주기.ipynb
@@ -106,6 +106,35 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "811892d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "109"
+      ],
+      "text/latex": [
+       "109"
+      ],
+      "text/markdown": [
+       "109"
+      ],
+      "text/plain": [
+       "[1] 109"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nrow(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "db361f9c",
    "metadata": {},
    "outputs": [
@@ -221,6 +250,55 @@
    "outputs": [],
    "source": [
     "write.csv(temp_df,\"./movies/directors.csv\",row.names=F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dafb1836",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>영화명</th><th scope=col>누적매출액</th><th scope=col>누적관객수</th><th scope=col>스크린수</th><th scope=col>상영횟수</th><th scope=col>개봉일</th><th scope=col>배급사</th><th scope=col>등급</th><th scope=col>장르</th><th scope=col>감독</th><th scope=col>배우</th><th scope=col>제작사</th><th scope=col>cluster</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>30</th><td>내 아내의 모든 것                                                                                                     </td><td>34224467500                                                                                                           </td><td>4598985                                                                                                               </td><td>563                                                                                                                   </td><td>91777                                                                                                                 </td><td>2012-05-17                                                                                                            </td><td>(주)넥스트엔터테인먼트월드(NEW)                                                                                       </td><td>15세이상관람가                                                                                                        </td><td>코미디,멜로/로맨스                                                                                                    </td><td>민규동                                                                                                                </td><td>임수정,이선균,류승룡,이달형,이진희,김도균,김선일,최차원,신경철,옥광희,박희본,김지영,정대용,남명렬,김도영,한이진,박현우</td><td>(주)수필름,영화사 집                                                                                                  </td><td>1                                                                                                                     </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllllllllll}\n",
+       "  & 영화명 & 누적매출액 & 누적관객수 & 스크린수 & 상영횟수 & 개봉일 & 배급사 & 등급 & 장르 & 감독 & 배우 & 제작사 & cluster\\\\\n",
+       "\\hline\n",
+       "\t30 & 내 아내의 모든 것                                                                                                      & 34224467500                                                                                                            & 4598985                                                                                                                & 563                                                                                                                    & 91777                                                                                                                  & 2012-05-17                                                                                                             & (주)넥스트엔터테인먼트월드(NEW)                                                                                        & 15세이상관람가                                                                                                         & 코미디,멜로/로맨스                                                                                                     & 민규동                                                                                                                 & 임수정,이선균,류승룡,이달형,이진희,김도균,김선일,최차원,신경철,옥광희,박희본,김지영,정대용,남명렬,김도영,한이진,박현우 & (주)수필름,영화사 집                                                                                                   & 1                                                                                                                     \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | 영화명 | 누적매출액 | 누적관객수 | 스크린수 | 상영횟수 | 개봉일 | 배급사 | 등급 | 장르 | 감독 | 배우 | 제작사 | cluster |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 30 | 내 아내의 모든 것                                                                                                      | 34224467500                                                                                                            | 4598985                                                                                                                | 563                                                                                                                    | 91777                                                                                                                  | 2012-05-17                                                                                                             | (주)넥스트엔터테인먼트월드(NEW)                                                                                        | 15세이상관람가                                                                                                         | 코미디,멜로/로맨스                                                                                                     | 민규동                                                                                                                 | 임수정,이선균,류승룡,이달형,이진희,김도균,김선일,최차원,신경철,옥광희,박희본,김지영,정대용,남명렬,김도영,한이진,박현우 | (주)수필름,영화사 집                                                                                                   | 1                                                                                                                      |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   영화명            누적매출액  누적관객수 스크린수 상영횟수 개봉일    \n",
+       "30 내 아내의 모든 것 34224467500 4598985    563      91777    2012-05-17\n",
+       "   배급사                          등급           장르               감독  \n",
+       "30 (주)넥스트엔터테인먼트월드(NEW) 15세이상관람가 코미디,멜로/로맨스 민규동\n",
+       "   배우                                                                                                                  \n",
+       "30 임수정,이선균,류승룡,이달형,이진희,김도균,김선일,최차원,신경철,옥광희,박희본,김지영,정대용,남명렬,김도영,한이진,박현우\n",
+       "   제작사               cluster\n",
+       "30 (주)수필름,영화사 집 1      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df[df$감독==\"민규동\",]"
    ]
   },
   {
@@ -485,7 +563,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
