--- a/Test/Untitled3.ipynb
+++ b/Test/Untitled3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "id": "4ddf3fa1",
    "metadata": {},
    "outputs": [],
@@ -16,22 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "id": "f3026c5d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in libarary(dplyr): 함수 \"libarary\"를 찾을 수 없습니다\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in libarary(dplyr): 함수 \"libarary\"를 찾을 수 없습니다\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "libarary(dplyr)"
+    "library(dplyr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e6ff796",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -262,11 +261,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9c1c00e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>누적관객수</th><th scope=col>스크린수</th><th scope=col>상영횟수</th><th scope=col>개봉일</th><th scope=col>배급사</th><th scope=col>등급</th><th scope=col>장르</th><th scope=col>감독</th><th scope=col>주연</th><th scope=col>제작사</th><th scope=col>cluster</th><th scope=col>조연</th><th scope=col>감독_주연조연시너지수</th><th scope=col>감독_주연조연악연수</th><th scope=col>상영횟수당누적관객수</th><th scope=col>스크린점유율</th><th scope=col>배우누적점수</th><th scope=col>배우점수</th><th scope=col>배우수</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>7232387                                                                                                                             </td><td>1299                                                                                                                                </td><td>138226                                                                                                                              </td><td>2017-12-27                                                                                                                          </td><td>CJ ENM                                                                                                                              </td><td>15세이상관람가                                                                                                                      </td><td>드라마                                                                                                                              </td><td>장준환                                                                                                                              </td><td>김윤석,하정우,유해진,김태리,박희순,이희준                                                                                           </td><td>(주)우정필름                                                                                                                        </td><td>4                                                                                                                                   </td><td>유승목,현봉식,박지환,이용직,박지홍,김경덕,김의성,최광일,김수진,김종수,김혜정,조우진,임철형,이창훈,서현우,이현균,김승훈,박경혜,이화룡</td><td>6                                                                                                                                   </td><td>0                                                                                                                                   </td><td>52.32291                                                                                                                            </td><td>46.96312                                                                                                                            </td><td>62.17949                                                                                                                            </td><td>16                                                                                                                                  </td><td>6                                                                                                                                   </td></tr>\n",
+       "\t<tr><td>2535450                                                                                                                             </td><td> 340                                                                                                                                </td><td> 54566                                                                                                                              </td><td>2007-02-14                                                                                                                          </td><td>CJ ENM                                                                                                                              </td><td>15세이상관람가                                                                                                                      </td><td>드라마,코미디                                                                                                                       </td><td>윤제균                                                                                                                              </td><td>임창정,하지원                                                                                                                       </td><td>(주)두사부필름                                                                                                                      </td><td>1                                                                                                                                   </td><td>주현,정두홍,이훈,강예원,박창익,박유선,고태호                                                                                        </td><td>0                                                                                                                                   </td><td>0                                                                                                                                   </td><td>46.46575                                                                                                                            </td><td>17.21519                                                                                                                            </td><td> 8.00000                                                                                                                            </td><td> 7                                                                                                                                  </td><td>2                                                                                                                                   </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllllllllllllllll}\n",
+       " 누적관객수 & 스크린수 & 상영횟수 & 개봉일 & 배급사 & 등급 & 장르 & 감독 & 주연 & 제작사 & cluster & 조연 & 감독\\_주연조연시너지수 & 감독\\_주연조연악연수 & 상영횟수당누적관객수 & 스크린점유율 & 배우누적점수 & 배우점수 & 배우수\\\\\n",
+       "\\hline\n",
+       "\t 7232387                                                                                                                              & 1299                                                                                                                                 & 138226                                                                                                                               & 2017-12-27                                                                                                                           & CJ ENM                                                                                                                               & 15세이상관람가                                                                                                                       & 드라마                                                                                                                               & 장준환                                                                                                                               & 김윤석,하정우,유해진,김태리,박희순,이희준                                                                                            & (주)우정필름                                                                                                                         & 4                                                                                                                                    & 유승목,현봉식,박지환,이용직,박지홍,김경덕,김의성,최광일,김수진,김종수,김혜정,조우진,임철형,이창훈,서현우,이현균,김승훈,박경혜,이화룡 & 6                                                                                                                                    & 0                                                                                                                                    & 52.32291                                                                                                                             & 46.96312                                                                                                                             & 62.17949                                                                                                                             & 16                                                                                                                                   & 6                                                                                                                                   \\\\\n",
+       "\t 2535450                                                                                                                              &  340                                                                                                                                 &  54566                                                                                                                               & 2007-02-14                                                                                                                           & CJ ENM                                                                                                                               & 15세이상관람가                                                                                                                       & 드라마,코미디                                                                                                                        & 윤제균                                                                                                                               & 임창정,하지원                                                                                                                        & (주)두사부필름                                                                                                                       & 1                                                                                                                                    & 주현,정두홍,이훈,강예원,박창익,박유선,고태호                                                                                         & 0                                                                                                                                    & 0                                                                                                                                    & 46.46575                                                                                                                             & 17.21519                                                                                                                             &  8.00000                                                                                                                             &  7                                                                                                                                   & 2                                                                                                                                   \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 누적관객수 | 스크린수 | 상영횟수 | 개봉일 | 배급사 | 등급 | 장르 | 감독 | 주연 | 제작사 | cluster | 조연 | 감독_주연조연시너지수 | 감독_주연조연악연수 | 상영횟수당누적관객수 | 스크린점유율 | 배우누적점수 | 배우점수 | 배우수 |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 7232387                                                                                                                              | 1299                                                                                                                                 | 138226                                                                                                                               | 2017-12-27                                                                                                                           | CJ ENM                                                                                                                               | 15세이상관람가                                                                                                                       | 드라마                                                                                                                               | 장준환                                                                                                                               | 김윤석,하정우,유해진,김태리,박희순,이희준                                                                                            | (주)우정필름                                                                                                                         | 4                                                                                                                                    | 유승목,현봉식,박지환,이용직,박지홍,김경덕,김의성,최광일,김수진,김종수,김혜정,조우진,임철형,이창훈,서현우,이현균,김승훈,박경혜,이화룡 | 6                                                                                                                                    | 0                                                                                                                                    | 52.32291                                                                                                                             | 46.96312                                                                                                                             | 62.17949                                                                                                                             | 16                                                                                                                                   | 6                                                                                                                                    |\n",
+       "| 2535450                                                                                                                              |  340                                                                                                                                 |  54566                                                                                                                               | 2007-02-14                                                                                                                           | CJ ENM                                                                                                                               | 15세이상관람가                                                                                                                       | 드라마,코미디                                                                                                                        | 윤제균                                                                                                                               | 임창정,하지원                                                                                                                        | (주)두사부필름                                                                                                                       | 1                                                                                                                                    | 주현,정두홍,이훈,강예원,박창익,박유선,고태호                                                                                         | 0                                                                                                                                    | 0                                                                                                                                    | 46.46575                                                                                                                             | 17.21519                                                                                                                             |  8.00000                                                                                                                             |  7                                                                                                                                   | 2                                                                                                                                    |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  누적관객수 스크린수 상영횟수 개봉일     배급사 등급           장르         \n",
+       "1 7232387    1299     138226   2017-12-27 CJ ENM 15세이상관람가 드라마       \n",
+       "2 2535450     340      54566   2007-02-14 CJ ENM 15세이상관람가 드라마,코미디\n",
+       "  감독   주연                                      제작사         cluster\n",
+       "1 장준환 김윤석,하정우,유해진,김태리,박희순,이희준 (주)우정필름   4      \n",
+       "2 윤제균 임창정,하지원                             (주)두사부필름 1      \n",
+       "  조연                                                                                                                                \n",
+       "1 유승목,현봉식,박지환,이용직,박지홍,김경덕,김의성,최광일,김수진,김종수,김혜정,조우진,임철형,이창훈,서현우,이현균,김승훈,박경혜,이화룡\n",
+       "2 주현,정두홍,이훈,강예원,박창익,박유선,고태호                                                                                        \n",
+       "  감독_주연조연시너지수 감독_주연조연악연수 상영횟수당누적관객수 스크린점유율\n",
+       "1 6                     0                   52.32291             46.96312    \n",
+       "2 0                     0                   46.46575             17.21519    \n",
+       "  배우누적점수 배우점수 배우수\n",
+       "1 62.17949     16       6     \n",
+       "2  8.00000      7       2     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(df5,2)"
+   ]
   },
   {
    "cell_type": "code",
