--- a/Test/배우점수.ipynb
+++ b/Test/배우점수.ipynb
@@ -1374,13 +1374,7 @@
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <ec>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <a0>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <90>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
-      "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <ec>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <ec>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <88>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <98>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <ed>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
@@ -1526,13 +1520,7 @@
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <9f>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <ec>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <88>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
-      "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <98>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <98>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <ed>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <8f>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
       "“conversion failure on 'Histogram of ju_df[ju_df$횟수 == i, \"평균점수\"]' in 'mbcsToSbcs': dot substituted for <89>”Warning message in title(main = main, sub = sub, xlab = xlab, ylab = ylab, ...):\n",
