--- a/kmeans 2.ipynb
+++ b/kmeans 2.ipynb
@@ -97,6 +97,35 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "365ebe79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "922"
+      ],
+      "text/latex": [
+       "922"
+      ],
+      "text/markdown": [
+       "922"
+      ],
+      "text/plain": [
+       "[1] 922"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nrow(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "573a67ec",
    "metadata": {},
    "outputs": [],
@@ -356,7 +385,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
